# faderpunk

./: .editorconfig  .gitignore  .release-please-manifest.beta.json  .release-please-manifest.json  AGENTS.md  CLAUDE.md  Cargo.toml  LATCH_REFACTOR_NOTES.md  README.md  build-uf2.sh  div-ordering.patch  gen-app-library.sh  gen-bindings.sh  index.html  knope.toml  memory.x  phoenix.txt  release-please-config.beta.json  release-please-config.json  release-plz.toml  version.json
.cargo/: config.toml
.claude/plans/: versioned_configurator_deployment_d1074827.plan.md
.github/workflows/: beta.yml  ci.yml  deploy.yml  picotool.yml  prepare-release.yml  release-beta.yml  release-please.yml  release-plz.yml  release.yml
1.10/: index.html
1.10/assets/: index-B7sOdTRH.js  index-BMUGZqdo.js  index-CSYitWW_.js  index-Cq-JksVs.css  index-DQz9kpLL.js  package-BXU3Zfb3.js
1.6/: index.html
1.6/assets/: index-B55bI93B.css  index-CE2X4MME.js  index-C_KWsDQ8.js  index-D9SRSJU-.js  index-DkPkmomY.js  index-I8Ryy_Q8.js  index-un8yFki_.js  index-x8rrLViZ.css  package-CA5ohcw8.js  package-CMYwUrRB.js  src-UW24ZMRV-DkBULnq8.js  src-UW24ZMRV-wJMPlyOJ.js
1.7/: index.html
1.7/assets/: index--jpyJfN7.js  index-Bb7VBB6s.js  index-Bh9qq50s.js  index-BsvmUjpl.js  index-CnOY6DQj.css  index-D9ivU_zZ.js  index-Dml-zlm1.js  package-CVRyr4fj.js  package-CWh1uJxy.js  src-UW24ZMRV-DfzoJXWR.js  src-UW24ZMRV-DuSySJ8N.js
1.8/: index.html
1.8/assets/: index-3-qgLT9S.js  index-8O7YfeJB.js  index-B8Rtzgbu.css  index-BYcmkIN3.js  index-BsBgQvZL.js  index-BwAaBzhK.css  index-Bwx6e0_C.js  index-C9XzeCLT.js  index-CAHHx0Y4.js  index-CPIBFSaa.js  index-Cu1tyk6c.js  index-CxLCgw-O.js  index-DMCVSZ9d.js  index-DOix9tjZ.js  index-DuZpzeKp.js  index-yYuCuNlx.css  package-B4N8aGQe.js  package-BFCelFzF.js  package-C8NsFHDx.js  package-Cnc9UMZb.js  package-RwJcR8dN.js  package-hXSvwlZT.js  src-UW24ZMRV-DyK-vb-D.js
1.9/: index.html
1.9/assets/: index-7UJuI6cR.js  index-B1tWFsiv.css  index-_DW-52fz.js  package-DUWIGw_6.js
assets/: index-2zwjm_27.js  index-59OYxaLU.js  index-6q4XsDxx.js  index-B5pnjHGU.css  index-BW9RV2Ql.css  index-BhNQ6cnV.css  index-Bw8RJY6V.css  index-C1uhay-j.js  index-CAf_2xWQ.js  index-CXtSAHml.js  index-CoLnaiIR.js  index-CsvbJGbl.js  index-D-YmrPI1.js  index-D2dqcy6i.js  index-D5Fr07Lm.js  index-DBj14h8c.js  index-DDCNm0OU.css  index-DJP7OmjE.js  index-DPQ1QIqX.js  index-DRiFKWuG.js  index-DnjC9Leg.css  index-Fs1aLNXy.js  index-L_bK4PtG.js  index-TfHGcR0Q.js  index-TogsPa8L.js  index-h4UtJoAM.js  index-uGDGJZNH.js  package-C0VoXsY3.js  package-CWmxSJxk.js  package-DCExNJho.js  package-DEBn7c5c.js  package-ZGcLmTw8.js  src-UW24ZMRV-BGw7rYgv.js  src-UW24ZMRV-C29e2YX2.js  src-UW24ZMRV-CIOIFxl3.js  src-UW24ZMRV-DKssLnVt.js  src-UW24ZMRV-DlFe-6yr.js
beta/: index.html
beta/assets/: index-B4gN_xBy.js  index-BAXB7CIX.js  index-BAmf6M46.js  index-BG9PXmay.css  index-BGmUyQLC.js  index-BQtB-vpm.js  index-BW4eQh3d.css  index-B_AtOSF6.js  index-B_EDCIIF.js  index-Bc-Be-yP.js  index-BcGTdUe7.css  index-BcNFKHQZ.js  index-BfW10riN.js  index-BgnnYw5z.js  index-BnxRFaMa.js  index-BqRT1s_m.js  index-BsZX18xc.js  index-Bsn845H0.css  index-BuWlitf3.js  index-BzzEjRut.js  index-C1SAjB38.js  index-CBVT47RO.js  (+63 more)
calibrator/: Cargo.toml  flake.nix
calibrator/src/: main.rs
config/: Cargo.toml
config/src/: lib.rs
configurator/: .changelog-beta-configurator.md  .gitignore  BETA.md  CHANGELOG.md  README.md  eslint.config.mjs  flake.nix  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.apps.json  tsconfig.json  tsconfig.landing.json  vite.apps.config.mjs  vite.config.mjs  vite.config.ts  vite.firmware-version.mjs  vite.landing.config.mjs
configurator-new/: eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs
configurator-old/: pnpm-lock.yaml
docs/: pll_clock.md  usb-host-compatibility.md  wip-app-ids.md
faderpunk/: .changelog-beta-faderpunk.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  build.rs  phoenix.txt
faderpunk-preset-editor/: .gitignore  README.md  apps-catalog.json  config-url.mjs  i18n.js  index.html  midi-sync.mjs  open-debug-chrome.mjs  package-lock.json  package.json  pull.mjs  push.mjs  server.mjs
faderpunk/.cargo/: config.toml
faderpunk/src/: app.rs  config.rs  events.rs  layout.rs  macros.rs  main.rs  scene.rs  state.rs  storage.rs  usb_midi.rs
faderpunk/src/apps/: ad.rs  arp_de_levy.rs  automator.rs  bernoulli.rs  calibration.rs  calibration_unipolar.rs  calibrator.rs  calibrator_test.rs  clk_div.rs  clk_div_plus.rs  clkcvrnd.rs  clkturing.rs  clock_test.rs  control.rs  control2.rs  cv2midi.rs  cv2midinote.rs  cvcombine.rs  default.rs  echolot.rs  euclid.rs  fibonacci_gate.rs  follower.rs  fp_grids.rs  gatecombine.rs  genseq.rs  grooves.rs  heat_pump.rs  keyboard.rs  lfo.rs  lfo_plus.rs  measure.rs  midi2cv.rs  midi_clock_test.rs  midi_note_test.rs  mod.rs  notefader.rs  offset_att.rs  panner.rs  probatrigger.rs  (+13 more)
faderpunk/src/tasks/: buttons.rs  calibration.rs  clock.rs  configure.rs  eeprom.rs  fram.rs  global_config.rs  i2c.rs  input_handlers.rs  leds.rs  max.rs  midi.rs  mod.rs  transport.rs  voct_freq.rs  web_usb.rs
fp-core/: Cargo.toml
fp-core/src/: app.rs  fmt.rs  lib.rs  platform.rs  storage.rs
fp-core/src/apps/: clk_div_plus.rs  fp_grids.rs  lfo_plus.rs  panner.rs  quantizer.rs  rnd.rs  seq8.rs  turing.rs
fp-core/src/tasks/: buttons.rs  clock.rs  configure.rs  fram.rs  global_config.rs  i2c.rs  input_handlers.rs  leds.rs  max.rs  midi.rs  mod.rs
fp-sim/: Cargo.toml  README.md  build.rs
fp-sim/src/: hw.rs  main.rs  midi.rs  panel.rs  storage.rs  ui.rs
gen-bindings/: Cargo.toml
gen-bindings/src/: catalog.rs  main.rs
libfp/: CHANGELOG.md  Cargo.toml
libfp/src/: colors.rs  constants.rs  ext.rs  i2c_proto.rs  latch.rs  lib.rs  quantizer.rs  sysex.rs  types.rs  utils.rs
libfp/src/fp_grids_lib/: mod.rs  pattern_generator.rs
simulator/: index.html
src/: app.rs  config.rs  constants.rs  lib.rs  macros.rs  main.rs  usb.rs
tools/: apps-catalog.json  gen-apps-catalog.py
(+197 files in other folders)
