[package]
name = "phoenix-16"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4", features = ["defmt", "max-interface-count-6"] }
embassy-usb-logger = { version = "0.4" }
embassy-rp = { version = "0.3", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xb",
  "binary-info",
] }
embassy-futures = { version = "0.1" }

at24cx = "0.1"
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
heapless = "0.8"
log = "0.4"
max11300 = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2"
pio-proc = "0.2"
portable-atomic = { version = "1.7", features = ["critical-section"] }
sequential-storage = "4.0"
smart-leds = "0.4"
static_cell = "2.1.0"
wmidi = { version = "4.0", default-features = false }
async-button = { git = "https://github.com/ATOVproject/async-button", branch = "master" }
array-init = "2.1.0"

# release
[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
