[package]
edition = "2021"
name = "fader-punk"
version = "0.1.0"

[[bin]]
name = "fader-punk"
path = "./src/bin/main.rs"

[dependencies]
at24cx = "0.1"
array-init = "2.1"
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = [
  "generic-queue-8",
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4", features = ["defmt", "max-interface-count-6"] }
embassy-usb-logger = "0.4.0"
embedded-io-async = "0.6.1"
esp-backtrace = { version = "0.15.1", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32s3"] }
heapless = "0.8"
log = "0.4.26"
max11300 = "0.4"
midi2 = { version = "0.8", default-features = false, features = [
  "channel-voice2",
  "channel-voice1",
] }
minicbor = { version = "0.26", features = ["derive"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
portable-atomic = "1.11.0"
postcard = "1.1"
serde = { version = "1", features = ["derive"], default-features = false }
sequential-storage = "4.0"
smart-leds-trait = "0.3.1"
static_cell = { version = "2.1.0", features = ["nightly"] }
ws2812-async = "0.3"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
