[workspace]
members = ["faderpunk", "fp-core", "fp-sim", "libfp"]
# fp-sim is host-only and enables std features on shared dependencies
# (critical-section, embassy-sync). Keeping it out of the default members
# prevents those features from leaking into the thumb build when running
# `cargo build/clippy --bin faderpunk` from the workspace root. Build the
# simulator explicitly with `cargo build -p fp-sim`.
default-members = ["faderpunk", "fp-core", "libfp"]

exclude = ["gen-bindings"]

resolver = "2"

[profile.release]
lto = true
incremental = false
codegen-units = 1
debug = 2

[profile.dev]
lto = true
opt-level = "z"
