[package]
name = "fp-calibrator"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-executor = { version = "0.7", features = [
  "task-arena-size-262144",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040"
] }
embassy-futures = { version = "0.1" }

cortex-m = { version = "0.7.7", features = ["inline-asm"], optional = true }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
lto = true
incremental = false
codegen-units = 1
debug = 2

[profile.dev]
lto = true
opt-level = "z"
