[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
minicbor = { version = "0.26", features = ["derive"] }
serde = { version = "1", features = ["derive"], default-features = false }
postcard-bindgen = { git = "https://github.com/teamplayer3/postcard-bindgen", rev = "3143d6d04ecb91da682a876afb885ecb26ad5737", package = "postcard-bindgen" }

libfp = { path = "../libfp" }
