[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
# NOTE: Older version needed by postcard
heapless = "0.7"
serde = { version = "1", features = ["derive"], default-features = false }
postcard-bindgen = { git = "https://github.com/chmanie/postcard-bindgen", rev = "73aa76f95bcdcf95656eed1c79d77a4b5026cb05", package = "postcard-bindgen" }

libfp = { path = "../libfp" }
