[package]
name = "faderpunk"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-io-async = "0.6.1"
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = [
  "task-arena-size-262144",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4", features = ["defmt", "max-interface-count-6"] }
embassy-usb-logger = { version = "0.4" }
embassy-rp = { version = "0.4", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xb",
  "binary-info",
] }
embassy-futures = { version = "0.1" }

at24cx = "0.1.3"
cortex-m = { version = "0.7", features = ["inline-asm"], optional = true }
cortex-m-rt = "0.7"
critical-section = "1.1"
defmt = "1.0"
defmt-rtt = "0.4"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-storage-async = "0.4.1"
# NOTE: Older version needed by postcard
heapless = "0.7"
log = "0.4"
max11300 = "0.4"
midly = { version = "0.5", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.3"
portable-atomic = { version = "1.11", features = ["critical-section"] }
postcard = "1.1"
# NOTE: Older version needed by embassy-rp
rand = { version = "0.8", default-features = false }
sequential-storage = "4.0"
serde = { version = "1", features = ["derive"], default-features = false }
smart-leds = "0.4.0"
static_cell = "2.1.0"
array-init = "2.1"
ws2812-async = "0.3"

config = { path = "../config" }
libfp = { path = "../libfp" }
cobs = { version = "0.3.0", default-features = false }

[profile.release]
lto = true
incremental = false
codegen-units = 1
debug = 2

[profile.dev]
lto = true
opt-level = "z"
