[package]
name = "faderpunk"
version = "0.2.0"
edition = "2021"

[dependencies]
embedded-io-async = "0.6.1"
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = [
  "task-arena-size-262144",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.5", features = ["defmt", "max-interface-count-6"] }
embassy-usb-logger = { version = "0.4" }
embassy-rp = { version = "0.4", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xb",
  "binary-info",
] }
embassy-futures = { version = "0.1" }

cobs = { version = "0.4.0", default-features = false }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
defmt = "1.0"
defmt-rtt = "1.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
fm24v10 = "0.1.1"
# NOTE: Older version needed by postcard
heapless = "0.7"
libm = "0.2.15"
linreg = { git = "https://github.com/ATOVproject/linreg-rs" }
log = "0.4"
max11300 = "0.4"
midly = { version = "0.5", default-features = false }
panic-probe = { version = "1.0", features = ["print-defmt"] }
pio = "0.3"
portable-atomic = { version = "1.11", features = ["critical-section"] }
postcard = "1.1"
# NOTE: Older version needed by embassy-rp
rand = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
smart-leds = "0.4.0"
static_cell = "2.1.1"
array-init = "2.1"
ws2812-async = "0.3"

libfp = { path = "../libfp" }

[lints.clippy]
large_futures = "warn"
unused_must_use = "deny"
