[package]
name = "fp-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
embassy-executor = { version = "0.7.0" }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.4.0" }

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.29", optional = true }

enum-ordinalize = "4.3.2"
# NOTE: Older version needed by postcard
heapless = "0.7.17"
libm = "0.2.16"
max11300 = "0.5.2"
midly = { version = "0.5.3", default-features = false }
minicbor = { version = "2.2.1", default-features = false, features = ["derive"] }
portable-atomic = { version = "1.13.1" }
postcard = "1.1.3"
serde = { version = "1.0.219", features = ["derive"], default-features = false }
smart-leds = "0.4.0"
static_cell = "2.1.1"

libfp = { path = "../libfp" }

[features]
default = []
## Route fp-core logging to defmt (firmware)
defmt = ["dep:defmt", "embassy-sync/defmt", "embassy-time/defmt", "embassy-executor/defmt"]
## Route fp-core logging to the `log` crate (host/simulator)
log = ["dep:log"]

[lints.clippy]
large_futures = "warn"

[lints.rust]
unused_must_use = "deny"
