[package]
name = "gen-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
postcard-bindgen = { git = "https://github.com/chmanie/postcard-bindgen", rev = "73aa76f95bcdcf95656eed1c79d77a4b5026cb05", package = "postcard-bindgen", features = [
  "generating",
] }
