[package]
name = "libfp"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "1.0.1"
embassy-time = "0.4.0"
heapless = "0.7.17"
max11300 = "0.4.2"
midly = { version = "0.5.3", default-features = false }
postcard = "1.1.3"
postcard-bindgen = "0.7.1"
serde = { version = "1.0.219", features = ["derive"], default-features = false }
smart-leds = "0.4.0"
